--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 <title>Smederevska tvr&#273;ava</title>
-
+<meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
 <!-- Komentar: Kaskadni stilovi u eksternom CSS fajlu (primer folder:css, fajl: style.css) -->
 <link rel="stylesheet" href="css/style.css" type="text/css">
 <script src="script/proverakontakta.js"></script>
@@ -58,13 +57,13 @@ p {
   		<div class="drugired">
 			<p>Na u&#353;&#263;u reke Jezave u Dunav, na povr&#353;ini od 11 hektara nalazi se jedna od najve&#263;ih srednjovekovnih ravni&#269;arskih tvr&#273;ava u Evropi i poslednje veliko delo srpske arhitekture iz ovog perioda.</p>
 			<p>Podigao ju je despot &#272;ura&#273; Brankovi&#263; u XV veku u cilju odbrane od Turaka.</p>
-			<p>Zbog velike brzine kojom je smederevska tvr&#273;ava gra&#273;ena, mnogi graditelji su umrli od iznemoglosti rade&#263;i na gra&#273;evini. Za glavnog krivca, narod je proglasio despoticu Jerinu (Irina Kantakuzin) ñ &#382;enu despota &#272;ur&#273;a kojoj je i do danas ostalo ime ìprokletaî.</p>
+			<p>Zbog velike brzine kojom je smederevska tvr&#273;ava gra&#273;ena, mnogi graditelji su umrli od iznemoglosti rade&#263;i na gra&#273;evini. Za glavnog krivca, narod je proglasio despoticu Jerinu (Irina Kantakuzin) ‚Äì &#382;enu despota &#272;ur&#273;a kojoj je i do danas ostalo ime ‚Äúprokleta‚Äù.</p>
 	  	</div>
 	</div>
 </div>
 
 <div class="mojDiv-center"><h1>Manifestacije</h1>
- 	<p class="tekstbeli"> Unutar njenih mo&#263;nih zidina danas se odr&#382;avaju koncerti i mnogobrojne kulturne i turisti&#269;ko-privredne manifestacije, <br> od kojih su najpoznatije ìSmederevska jesenì i festival ìTvr&#273;ava tetarì. </p>
+ 	<p class="tekstbeli"> Unutar njenih mo&#263;nih zidina danas se odr&#382;avaju koncerti i mnogobrojne kulturne i turisti&#269;ko-privredne manifestacije, <br> od kojih su najpoznatije ‚ÄúSmederevska jesen‚Äú i festival ‚ÄúTvr&#273;ava tetar‚Äú. </p>
  	<br><br>
 	<div class="zadnjired">
 		<div style="flex-grow: 1">
