--- a/istorijat.html
+++ b/istorijat.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="sr">
 <head>
 <title>Smederevska tvr&#273;ava-istorijat</title>
 
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
 <!-- Komentar: Kaskadni stilovi u eksternom CSS fajlu (primer folder:css, fajl: style.css) -->
 <link rel="stylesheet" href="css/style.css" type="text/css">
 
@@ -49,13 +48,13 @@ p {
 		<p class="tekstcrni">Prvobitna ideja koja je postojala pri gradnji Smederevskog grada bilo je podizanje utvr&#273;enog dvorca za despota i njegovu porodicu uz granicu prema Kraljevini Ugarskoj iz koje bi se oni, u slu&#269;aju opasnosti od Osmanlija, lako mogli skloniti na bezbedan prostor njihovog severnog seniora i suseda.</p>
 		<p class="tekstcrni">Sa takvim planom se otpo&#269;elo sa gradnjom 1428. godine pod nadzorom Tome Kantakuzina, ali je tokom narednih pola veka tvr&#273;ava bila vi&#353;e puta pro&#353;irivana, dogra&#273;ivana i prera&#273;ivana, da bi 1480. godine poprimila obrise koje i danas poseduje. Prema istra&#382;ivanjima koja je sproveo i objavio Leontije Pavlovi&#263;, na Smederevskoj tvr&#273;avi se mogu razlikovati 4 razli&#269;ite faze srpske i 1 faza osmanske gradnje.</p>
 
-		<h2>I faza gradnje (1428—1439)</h2>
+		<h2>I faza gradnje (1428вЂ”1439)</h2>
 		<p class="tekstcrni">Prva faza gradnje obuhvata podizanje Malog grada sa unutra&#353;njim zgradama, mahom drvene konstrukcije. On je bio opasan niskom bedemom i vodenim &#353;ancem odnosno rekama, a posedovao je tri kapije, jednu prema naselju i dve prema Dunavu, uz Don&#382;on. Neki autori iznose tezu, da u prvom momentu uop&#353;te nije postojala kapija ka naselju, ve&#263; da se pre podizanja niskog bedema i vodenog &#353;anca u utvr&#273;enje ulazilo kroz kapije na obali Dunava.</p>
 		<p class="tekstcrni">Posle podizanja Malog rada, postalo je jasno da on nije dovoljan i odmah se pristupilo njegovom pro&#353;irenju dodavanjem dugih bedema koji bi formirali Veliki grad. O tome da se prvobitno planiralo samo podizanje Malog grada svedo&#269;e otvori za topove u njemu koji su danas usmereni u bedeme, koji su podignuti kasnije. Nije mogu&#263;e a sigurno&#353;&#263;u odrediti dokle je i u kolikoj meri bio podignut Veliki grad 1439. godine kada su Osmanlije opsele Smederevo,
 		ali je izvesno da je on bio u zavr&#353;noj fazi, jer je opsadiocima izledao kao svetsko &#269;udo, iako su se susreli sa Carigradskim bedemima koji su poslu&#382;ili kao neka vrsta inspiracije za smederevske. Tako da je ona najverovatnije bila manje vi&#353;e u potpunosti zavr&#353;ena (niski+visoki bedem+vodeni &#353;anac), ali je pitanje bilo da li su sve kule na varo&#353;kom i jezavskom bedemu bile skroz zavr&#353;ene. Tokom ovog perioda su izvr&#353;ene i prepravke na vrhovima nekih kula
 		koje su zasvo&#273;ene da bi na njima mogli biti postavljeni topovi kojima je dejstvovano po neprijatelju 1439. godine.</p>
 
-		<h2>II faza gradnje (1444—?)</h2>
+		<h2>II faza gradnje (1444вЂ”?)</h2>
 		<p class="tekstcrni">Posle obnove Srpske despotovine Segedinskim mirom 1444. godine, otpo&#269;ela je obnova tvr&#273;ave, oja&#269;avanje nekih kula da bi mogle da nose topove i zamena drvenih zgrada u Malom gradu kamenim. U ovom periodu je dodata i kula devet bra&#263;e glave i sedam bra&#263;e glave u Malom gradu, koja je ni&#382;a od ostalih i koja je slu&#382;ila kao magacin za &#382;itarice.</p>
 	</div>
 	<div style="flex-grow: 1">
