--- a/istorijat.html
+++ b/istorijat.html
@@ -2,7 +2,7 @@
 <html lang="sr">
 <head>
 <title>Smederevska tvr&#273;ava-istorijat</title>
-
+<meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <!-- Komentar: Kaskadni stilovi u eksternom CSS fajlu (primer folder:css, fajl: style.css) -->
 <link rel="stylesheet" href="css/style.css" type="text/css">
