--- a/restauracija.html
+++ b/restauracija.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Smederevska tvr&#273;ava-restauracija</title>
-
+<meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
 <!-- Komentar: Kaskadni stilovi u eksternom CSS fajlu (primer folder:css, fajl: style.css) -->
@@ -50,7 +50,7 @@ p {
 	</div>
 	<div class="drugired">
 		<h2>Pod za&#353;titom dr&#382;ave</h2>
-		<p class="tekstcrni">Sjajan dizajn utvr&#273;enja mo&#382;e se videti na osnovu &#269;injenice da na njoj, od okon&#269;anja srpske gradnje sredinom XV veka i osmanskog dodavanja &#269;etiri artiljerijske kule 1480. godine, nije u&#269;injena nikakva prepravka sve do kraja njene vojne upotrebe u drugoj polovini 19. veka, nakon &#353;to je, sa jo&#353; nekoliko utvr&#273;enja, 1867. godine predata knezu Srbije Mihailu Obrenovi&#263;u (1839—1842, 1860-1868).
+		<p class="tekstcrni">Sjajan dizajn utvr&#273;enja mo&#382;e se videti na osnovu &#269;injenice da na njoj, od okon&#269;anja srpske gradnje sredinom XV veka i osmanskog dodavanja &#269;etiri artiljerijske kule 1480. godine, nije u&#269;injena nikakva prepravka sve do kraja njene vojne upotrebe u drugoj polovini 19. veka, nakon &#353;to je, sa jo&#353; nekoliko utvr&#273;enja, 1867. godine predata knezu Srbije Mihailu Obrenovi&#263;u (1839â€”1842, 1860-1868).
 		 Tvr&#273;ava je pretrpela zna&#269;ajna razaranja tokom svetskih ratova od bombardovanja i eksplozija, ali je i pored toga zadr&#382;ala svoju monumentalnost. Danas je u fazi restauracije uglavnom Veliki grad, dok su na prostoru Malog grada izvedeni konzervatorski i restauratorski radovi &#269;ime mu je vra&#263;en pre&#273;a&#353;nji izgled, a cela tvr&#273;ava se od 1946. godine nalazi pod za&#353;titom dr&#382;ave.
 		 Mali grad je vrlo &#269;esto mesto kulturnih i sportskih manifestacija, a tokom Smederevske jeseni on postaje kulturna prestonica Smedereva i centar mnogobrojnih predstava i koncerata.</p>
 		
